# galaxy-graph-lab

./: .gitignore  README.md  pyproject.toml
data/: galaxy_easy_10x10_001.json  galaxy_easy_10x10_002.json  galaxy_easy_10x10_003.json  galaxy_easy_10x10_004.json  galaxy_easy_10x10_005.json  galaxy_easy_10x10_006.json  galaxy_easy_10x10_007.json  galaxy_easy_10x10_008.json  galaxy_easy_10x10_009.json  galaxy_easy_10x10_010.json  galaxy_easy_10x10_011.json  galaxy_easy_10x10_012.json  galaxy_easy_10x10_013.json  galaxy_easy_10x10_014.json  galaxy_easy_10x10_015.json  galaxy_easy_10x10_016.json  galaxy_easy_10x10_017.json  galaxy_easy_10x10_018.json  galaxy_easy_10x10_019.json  galaxy_easy_10x10_020.json  galaxy_easy_11x11_001.json  galaxy_easy_11x11_002.json  galaxy_easy_11x11_003.json  galaxy_easy_11x11_004.json  galaxy_easy_11x11_005.json  galaxy_easy_11x11_006.json  galaxy_easy_11x11_007.json  galaxy_easy_11x11_008.json  galaxy_easy_11x11_009.json  galaxy_easy_11x11_010.json  galaxy_easy_11x11_011.json  galaxy_easy_11x11_012.json  galaxy_easy_11x11_013.json  galaxy_easy_11x11_014.json  galaxy_easy_11x11_015.json  galaxy_easy_11x11_016.json  galaxy_easy_11x11_017.json  galaxy_easy_11x11_018.json  galaxy_easy_11x11_019.json  galaxy_easy_11x11_020.json  (+268 more)
data/game/: galaxy_game_7x7_f320c4ea343e1e35.json
data/threshold/: hard_threshold_10x10.json  hard_threshold_11x11.json  hard_threshold_12x12.json  hard_threshold_13x13.json  hard_threshold_14x14.json  hard_threshold_15x15.json  hard_threshold_16x16.json  hard_threshold_7x7.json  hard_threshold_8x8.json  (+2 more)
galaxy_graph_lab/: __init__.py  dataset_cli.py  main.py
report/: main.tex
tests/: test_smoke.py
(+981 files in other folders)
